# data_and_evaluation

./: README.md  requirements.txt
src_evaluation/: IO2.py  eval.sh  evaluation_metrics.py
src_vascularSynthesis/Source/: CMakeLists.txt  MersenneTwister.h  NodeTable.cpp  NodeTable.h  OxygenationMap.cpp  OxygenationMap.h  SupplyMap.cpp  SupplyMap.h  TreeDrawer.cpp  TreeDrawer.h  VascuSynth.cpp  VascularTree.cpp  VascularTree.h
